# beautiful

./: README.md  main.py  pyproject.toml  requirements.txt
module1/: image_crawler.py
module2/: lyrics_crawler.py
tests/: test_module1.py  test_module2.py
